--- a/css/style.css
+++ b/css/style.css
@@ -364,13 +364,14 @@ img{
   color: #f1f1f1;
   font-size: 1rem !important;
   padding: 1rem;
+  padding-top: 2rem;
   text-align: center;
 }
 .quote_h3{
   color: #f1f1f1;
   font-size: 0.9rem !important;
   padding: 1rem;
-  padding-bottom:0.2rem;
+  padding-bottom: 0.5rem;
   text-align: center;
 }
 
