--- a/css/style.css
+++ b/css/style.css
@@ -8048,7 +8048,7 @@ a.text-dark:hover, a.text-dark:focus {
   color: rgba(0, 0, 0, 0.5) !important; }
 
 .text-white-50 {
-  color: rgba(255, 255, 255, 0.5) !important; }
+  color: rgba(255, 255, 255) !important; }
 
 .text-hide {
   font: 0/0 a;
@@ -8282,7 +8282,7 @@ h1, h2, h3, h4, h5,
       color: #ffbd39; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
-    color: rgba(255, 255, 255, 0.5) !important;
+    color: rgba(255, 255, 255) !important;
     cursor: pointer;
     padding-right: 0;
     text-transform: uppercase;
@@ -8752,7 +8752,7 @@ h1, h2, h3, h4, h5,
       background: #fff !important;
       color: #fff; }
     .btn.btn-white.btn-outline-white {
-      border: 1px solid rgba(255, 255, 255, 0.5) !important;
+      border: 1px solid rgba(255, 255, 255) !important;
       background: transparent !important;
       color: #fff !important; }
       .btn.btn-white.btn-outline-white:hover {
